# flink-opendata-weather-pipeline

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: README.md  flink-conf.yaml  log4j-console.properties
examples/: README.md  consumer_example.py
jobs/: __init__.py  flink_job.py
main/: __init__.py  producer.py
src/processors/: weather_processor.py
src/schemas/: weather.py
